Using redis to store jwt token